2006-01-17  Mike Emmel  <mike.emmel@gmail.com>

	* llvm/llvmgen.hh, llvm/llvmfunction.cc, llvm/llvmclass.cc,
	llvm/llvmgen.cc, llvm/llvmclass.hh, llvm/llvmfunction.hh: New
	files.

2006-01-16  Mike Emmel  <mike.emmel@gmail.com>

	* Makefile.in: Rebuilt.
	* Makefile.am (gcjx_LDADD): Handle LLVM.
	(libgcjx_la_SOURCES): Likewise.
	(llvm_cppflags, LLVMLIBPATH, llvm_libs, llvm_sources): New
	variables.
	* main.cc: Include llvmgen.hh.
	(parse_args): Handle '-o llvm'.
	* configure, gcjx-config.h.in: Rebuilt.
	* configure.ac (--with-llvm): New option.
	(--enable-llvmdebug): Likewise.

2006-01-13  Tom Tromey  <tromey@redhat.com>

	* main.cc (argument_parser::parse_args): Fully handle -g.
	(argument_parser::parse_debug_option): New method.
	(argument_parser::help_options): Updated.
	* bytecode/classwriter.cc (write): Handle new debug flag.
	* bytecode/generate.cc (generate): Handle different debug flags.
	* compiler.cc (compiler): Updated.
	* compiler.hh (compiler::target_debug): Removed.
	(compiler::target_debug_source, compiler::target_debug_lines,
	compiler::target_debug_vars): New flags.

2006-01-07  Tom Tromey  <tromey@redhat.com>

	* model/class.cc (get_this_0): Make this$0 package-private.

2005-12-21  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* source/parse.hh (parse::basic_type_p(token_value)): Remove extra
	"parse::" qualification.
	(parse::assignment_op_p(token_value)): Likewise.

2005-12-21  Tom Tromey  <tromey@redhat.com>

	* TODO: Updated.
	* PROJECTS: Updated.
	* HACKING: New file.

2005-12-21  Tom Tromey  <tromey@redhat.com>

	* model/typevar.cc (get_formal_signature): Special-case empty
	bounds.

2005-12-21  Tom Tromey  <tromey@redhat.com>

	* bytecode/classwriter.cc (write): Special-case empty signature.

2005-12-20  Tom Tromey  <tromey@redhat.com>

	* model/primitive.hh (unsigned_right_shift): Mask relevant bits.

2005-12-19  Tom Tromey  <tromey@redhat.com>

	* model/primitive.hh (unsigned_right_shift): Use long long.